@@ -1,3 +1,10 @@
+Mon Nov 30 1998  Felipe A. Rodriguez  <far@ix.netcom.com>
+
+	* NSAttributedString.m and NSAttributedString.h remove.
+	* NSStringDrawing.m and NSStringDrawing.h add NSAttributedString interface 
+	and implementation.  Implement NSAttributedString's size method and
+	optimize tab width calculation.
+
 Sat Nov 28 18:25:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Tools/example.m: Add very crude code to open a URL in netscape.
